# aegis

./: .gitignore  .mcp.json  2026-04-23-aegis-core-rs-ring0.md  AGENTS.md  Cargo.toml  LICENSE  README.md  README.zh-TW.md  conftest.py  glama.json  pyproject.toml  test_genai_tools.py
.github/workflows/: aegis.yml  ci.yml  release.yml  test.yml
aegis/: cli.py
aegis-core-rs/: Cargo.toml  aegis_models.py
aegis-core-rs/queries/: python.scm
aegis-core-rs/src/: enforcement.rs  lib.rs  signal_layer_pyapi.rs
aegis-core-rs/src/ast/: parser.rs
aegis-core-rs/src/ast/languages/: mod.rs  python.rs
aegis-core-rs/src/graph/: cycle.rs  dependency.rs  traversal.rs
aegis-core-rs/src/incremental/: cache.rs  mod.rs  updater.rs
aegis-core-rs/src/ir/: builder.rs  model.rs
aegis-core-rs/src/signals/: demeter.rs
aegis/agents/: claude.py  critic.py  gemini.py  groq.py  llm_adapter.py  openai.py  openrouter.py  planner.py
aegis/analysis/: cohesion.py  coupling.py  demeter.py  metrics.py  signals.py
aegis/config/: loader.py  schema.py
aegis/core/: bindings.py  types.py
aegis/daemons/: updater.py  watcher.py
aegis/delivery/: __init__.py  renderer.py
aegis/enforcement/: rules.py  validator.py
aegis/eval/: __init__.py  harness.py  scenarios.py
aegis/graph/: queries.py  service.py
aegis/intent/: __init__.py  bypass.py  classifier.py
aegis/ir/: models.py  normalizer.py  patch.py
aegis/policy/: __init__.py  engine.py
aegis/runtime/: decision_pattern.py  executor.py  interceptor.py  pipeline.py  task_verifier.py  trace.py  validator.py
aegis/semantic/: __init__.py  comparator.py  gemini_comparator.py
aegis/shared/: edit_engine.py
aegis/toolcall/: __init__.py  validator.py
aegis/tools/: file_system.py
aegis_mcp/: __init__.py  __main__.py  server.py
crates/aegis-agent/: Cargo.toml
crates/aegis-agent/examples/: chat_demo.rs
crates/aegis-agent/src/: aegis_predict.rs  agent_tools.rs  api.rs  bash.rs  compact.rs  conversation.rs  cost.rs  cost_observer_aegis.rs  extra_tools.rs  hooks.rs  lib.rs  message.rs  multi_tool.rs  permission.rs  predict.rs  stalemate.rs  testing.rs  tool.rs  verifier.rs
crates/aegis-agent/src/mcp/: client.rs  executor.rs  mod.rs  protocol.rs  transport.rs
crates/aegis-agent/src/providers/: anthropic.rs  gemini.rs  http.rs  mod.rs  openai_compat.rs  registry.rs
crates/aegis-agent/tests/: aegis_predict.rs  anthropic_provider.rs  anthropic_smoke.rs  conversation_loop.rs  gemini_provider.rs  mcp_client.rs  mcp_with_aegis_mcp.rs  no_auto_retry.rs  no_coaching_in_summary.rs  no_coaching_injection.rs  openai_compat_provider.rs  openai_compat_smoke.rs  openai_streaming.rs  permission_integration.rs  predict_and_cost.rs  provider_with_runtime.rs  stalemate_terminates.rs  tripwire_no_auto_retry.rs  tripwire_no_coaching_injection.rs  verifier_drives_done.rs  verifier_integration.rs
crates/aegis-cli/: Cargo.toml
crates/aegis-cli/src/: config.rs  input.rs  main.rs  render.rs  session_store.rs  setup.rs
crates/aegis-core/: Cargo.toml
crates/aegis-core/queries/: csharp.scm  dart.scm  go.scm  java.scm  javascript.scm  kotlin.scm  php.scm  python.scm  rust.scm  swift.scm  typescript.scm
crates/aegis-core/src/: attest.rs  enforcement.rs  findings.rs  lib.rs  reasons.rs  scan.rs  security.rs  signal_extraction.rs  signal_layer_pyapi.rs  validate.rs  workspace.rs
crates/aegis-core/src/ast/: adapter.rs  mod.rs  parsed_file.rs  parser.rs  registry.rs
crates/aegis-core/src/ast/languages/: csharp.rs  dart.rs  go.rs  java.rs  javascript.rs  kotlin.rs  mod.rs  php.rs  rust.rs  swift.rs  typescript.rs
crates/aegis-core/src/graph/: mod.rs  pyapi.rs
crates/aegis-core/src/incremental/: updater.rs
crates/aegis-core/src/ir/: builder.rs  mod.rs  model.rs
crates/aegis-core/src/signals/: coupling.rs  demeter.rs  imports_local.rs  mod.rs  smells.rs
crates/aegis-decision/: Cargo.toml
crates/aegis-decision/src/: iteration.rs  lib.rs  pattern.rs  (+1 more)
crates/aegis-index/: Cargo.toml
crates/aegis-ir/: Cargo.toml
crates/aegis-mcp/: Cargo.toml
crates/aegis-mcp/src/: main.rs
crates/aegis-providers/: Cargo.toml
crates/aegis-providers/src/: error.rs  http.rs  lib.rs  openai.rs  planner.rs
crates/aegis-pyshim/: Cargo.toml
crates/aegis-pyshim/src/: context.rs  decision.rs  ir.rs  lib.rs  pipeline.rs  providers.rs  runtime.rs  task.rs  trace.rs
crates/aegis-runtime/: Cargo.toml
crates/aegis-runtime/src/: context.rs  executor.rs  lib.rs  loop_step.rs  metrics.rs  native_pipeline.rs  planner_trait.rs  sequence.rs  snapshot.rs  validator.rs
crates/aegis-trace/: Cargo.toml
docs/: ROADMAP.md  case_pocketos_railway_delete.md  commercial.md  deferred_lsp_demeter.md  framework.md  future_abstraction.md  gap3_control_plane.md  multi_language_plan.md  post_launch_discipline.md  v1_rust_port_plan.md  v1_validation.md  v3_agent_design.md  v3_dogfood.md
docs/integrations/: README.md  git_pre_commit.md  github_action.md  mcp_design.md
docs/launch/: announcement.md  issue_integration_examples.md  issue_rust_build_friction.md  issue_thrashing_call.md
examples/: 00_quickstart.py  01_pipeline_basic.py  02_gateway_single_call.py  03_custom_verifier.py  04_read_decision_trace.py
packaging/: README.md
packaging/homebrew/: aegis.rb
packaging/npm/: package.json
scripts/: dogfood.py  run_scenario.py  v1_aggregate.py  v1_validation.py
templates/: default_core_policy.yaml
tests/: test_ast_parser.py  test_cli.py  test_core_integration.py  test_decision_pattern.py  test_decision_trace.py  test_delivery_renderer.py  test_dynamic_tool_control.py  test_edit_engine.py  test_enforcement.py  test_eval_harness.py  test_file_system.py  test_gemini_comparator.py  test_intent_bypass.py  test_intent_classifier.py  test_llm_gateway.py  test_mcp_server.py  test_openai_provider.py  test_policy_engine.py  test_refactor_pipeline.py  test_regression_detection.py  test_semantic_comparator.py  test_semantic_ir.py  test_side_effect_isolation.py  test_signal_layer.py  test_task_verifier.py  test_toolcall_validator.py
tests/scenarios/: __init__.py  _runner.py
(+24 files in other folders)
