# Aegis Cargo workspace (V2).
#
# V2 architecture is MCP-only. The pipeline / loop / executor / planner
# crates from V1 are removed: their judgment-driven role is replaced by
# the consuming LLM agent reading findings emitted by aegis-core.
#
# Surviving crates:
#   aegis-core   — Layer 1 parse + Layer 2 workspace + finding generators
#   aegis-index  — mtime-aware workspace cache (Layer 2 backing store)
#   aegis-mcp    — single MCP server binary; the only application

[workspace]
resolver = "2"
members = [
    "crates/aegis-core",
    "crates/aegis-index",
    "crates/aegis-mcp",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/wei9072/aegis"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
