# Build/install metadata.
#
# V0.x note: the Rust extension `aegis_core_rs` builds via a separate
# `maturin develop --release` step inside `aegis-core-rs/`. Bundling
# it into a single `pip install` (maturin mixed-mode at this repo's
# layout) requires renaming the extension to be a submodule of
# `aegis` (e.g. `aegis._core`), which would touch ~25 import sites.
# Deferred until V1+ when packaging discipline (PyPI wheels, version
# pinning) is also being addressed.
#
# What `pip install -e ".[dev]"` does today:
#   - Registers the `aegis` Python package in editable mode
#   - Installs runtime dependencies (click, google-genai, etc.)
#   - Adds the `aegis` CLI to PATH (via [project.scripts])
#   - With [dev] extra: also installs maturin + pytest
#
# What you still need to do manually:
#   cd aegis-core-rs && maturin develop --release
#
# See AGENTS.md for the full install sequence.

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aegis-control-plane"
version = "0.0.1"
description = "Behavior harness for LLM-driven workflows. Rejects regressions instead of teaching the model."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "wei9072 and Aegis contributors" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Quality Assurance",
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "google-genai",
    "google-generativeai",
    "prompt_toolkit",
]

[project.optional-dependencies]
dev = [
    "maturin>=1.0",
    "pytest>=7.0",
]
mcp = [
    # Optional — only needed if you want to run `aegis-mcp` as an
    # MCP server for Cursor / Claude Code / other MCP clients.
    "mcp>=0.9",
]

[project.scripts]
aegis = "aegis.cli:cli"
aegis-mcp = "aegis_mcp.server:main"

[project.urls]
Homepage = "https://github.com/wei9072/aegis"
Issues = "https://github.com/wei9072/aegis/issues"
"V1 Validation Evidence" = "https://github.com/wei9072/aegis/blob/main/docs/v1_validation.md"

[tool.setuptools.packages.find]
include = ["aegis*", "aegis_mcp*"]
exclude = ["tests*", "examples*", "docs*", "aegis-core-rs*", "scripts*"]
