# Build/install metadata.
#
# Maturin mixed-mode build: a single `pip install -e .` builds the
# Rust extension into the active Python environment AND installs the
# `aegis` and `aegis_mcp` Python packages with their dependencies
# AND registers the `aegis` and `aegis-mcp` CLI entry points.
#
# Layout:
#   aegis/                   Python package
#   aegis/_core              Rust extension (was: top-level aegis_core_rs)
#   aegis_mcp/               Optional MCP server package
#   aegis-core-rs/           Rust crate source (Cargo.toml here)
#
# Editable install: `pip install -e .` — Python source changes take
# effect immediately; Rust source changes require re-running pip
# install (or `maturin develop --release` from aegis-core-rs/).

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "aegis-control-plane"
version = "0.0.1"
description = "Behavior harness for LLM-driven workflows. Rejects regressions instead of teaching the model."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "wei9072 and Aegis contributors" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Quality Assurance",
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "google-genai",
    "google-generativeai",
    "prompt_toolkit",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
mcp = [
    "mcp>=0.9",
]

[project.scripts]
aegis = "aegis.cli:cli"
aegis-mcp = "aegis_mcp.server:main"

[project.urls]
Homepage = "https://github.com/wei9072/aegis"
Issues = "https://github.com/wei9072/aegis/issues"
"V1 Validation Evidence" = "https://github.com/wei9072/aegis/blob/main/docs/v1_validation.md"

[tool.maturin]
# V1.9 cycle-break — the `_core` cdylib lives in aegis-pyshim now
# so pyshim can depend on aegis-core (for the build_context + planner
# Rust ports). aegis-core stays a pure rlib.
manifest-path = "crates/aegis-pyshim/Cargo.toml"
python-source = "."
module-name = "aegis._core"
features = ["extension-module"]
# Include the optional aegis_mcp/ package in built wheels — maturin's
# default Python package discovery only picks up the package matching
# `module-name`'s leading segment (here: `aegis`); aegis_mcp needs to
# be added explicitly.
include = [{ path = "aegis_mcp/**/*.py", format = ["sdist", "wheel"] }]
