[package]
name = "aegis-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "V3 — coding agent built on aegis primitives. See docs/v3_agent_design.md."

[dependencies]
aegis-decision = { path = "../aegis-decision" }
serde = { workspace = true }
serde_json = { workspace = true }
ureq = { version = "2.10", features = ["json"] }
