[package]
name = "aegis-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "V3 — coding agent built on aegis primitives. See docs/v3_agent_design.md."

[dependencies]
aegis-core = { path = "../aegis-core" }
aegis-decision = { path = "../aegis-decision" }
serde = { workspace = true }
serde_json = { workspace = true }
ureq = { version = "2.10", features = ["json"] }
glob = "0.3"

[dev-dependencies]
tempfile = "3"
# AST-based contract tripwires (tests/tripwire_*.rs) parse src/ via
# syn instead of grepping strings, so comments / docstrings / string
# literals can't false-trigger the trip-wire.
syn = { version = "2", features = ["full", "visit"] }
