[package]
name = "aegis-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "aegis"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }

aegis-core = { path = "../aegis-core" }
aegis-decision = { path = "../aegis-decision" }
aegis-ir = { path = "../aegis-ir" }
aegis-providers = { path = "../aegis-providers" }
aegis-runtime = { path = "../aegis-runtime" }
aegis-agent = { path = "../aegis-agent" }
