[package]
name = "aegis-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "aegis"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }

# UI/UX layer for `aegis chat` REPL — adapted from claw-code (MIT).
# crossterm: ANSI colour + cursor control
# pulldown-cmark: markdown parser the renderer walks events from
# syntect: syntax-highlighted code blocks
# rustyline: line editor + history + slash-command tab completion
crossterm = "0.28"
pulldown-cmark = "0.13"
syntect = "5"
rustyline = "15"
toml = "0.8"

aegis-core = { path = "../aegis-core" }
aegis-decision = { path = "../aegis-decision" }
aegis-ir = { path = "../aegis-ir" }
aegis-providers = { path = "../aegis-providers" }
aegis-runtime = { path = "../aegis-runtime" }
aegis-agent = { path = "../aegis-agent" }

[dev-dependencies]
tempfile = "3"
