[package]
name = "aegis-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "aegis-mcp"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

aegis-core = { path = "../aegis-core" }
