[package]
name = "aegis-pyshim"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["rlib"]

[features]
default = []
extension-module = ["pyo3/extension-module"]

[dependencies]
pyo3 = { workspace = true }
serde_json = { workspace = true }

aegis-trace = { path = "../aegis-trace" }
aegis-decision = { path = "../aegis-decision" }
aegis-ir = { path = "../aegis-ir" }
aegis-providers = { path = "../aegis-providers" }
aegis-runtime = { path = "../aegis-runtime" }
