[package]
name = "aegis-pyshim"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
# V1.9 — `_core` cdylib moved here from aegis-core to break the
# cycle. Maturin's `module-name = "aegis._core"` in pyproject.toml
# now installs the produced .so at aegis/_core.<so> from this crate.
name = "_core"
crate-type = ["cdylib", "rlib"]

[features]
default = []
extension-module = [
    "pyo3/extension-module",
    "aegis-core/extension-module",
]

[dependencies]
pyo3 = { workspace = true }
serde_json = { workspace = true }

aegis-core = { path = "../aegis-core" }
aegis-trace = { path = "../aegis-trace" }
aegis-decision = { path = "../aegis-decision" }
aegis-ir = { path = "../aegis-ir" }
aegis-providers = { path = "../aegis-providers" }
aegis-runtime = { path = "../aegis-runtime" }
