[package]
name = "aegis-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

aegis-decision = { path = "../aegis-decision" }

[dev-dependencies]
tempfile = "3"
