[package]
name = "aegis-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }

aegis-decision = { path = "../aegis-decision" }
aegis-ir = { path = "../aegis-ir" }

[dev-dependencies]
tempfile = "3"
